fix: use margin instead of gap

--- a/src/style.css
+++ b/src/style.css
@@ -156,7 +156,6 @@ textarea {
 label[for='consent'] {
 	display: flex;
 	align-items: center;
-	gap: 0 1rem;
 	cursor: pointer;
 }
 
@@ -168,6 +167,7 @@ label[for='consent'] {
 	aspect-ratio: 1;
 	border: 1px solid var(--color-neutral-500);
 	cursor: pointer;
+	margin-right: 1rem;
 }
 
 input[name='consent']:focus + .custom-checkbox {
